workshop 3/appv2-deployment.yaml
apiVersion: extensions/v1beta1
# apiVersion: apps/v1
kind: Deployment

metadata:
  name: appv2-deployment 

spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: myapp
        version: v2
    spec:
      containers:
        - name: myappv2-container
          image: stackupiss/northwind-app:v2
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          ports:
            - containerPort: 3000
              name: myapp2-port
          imagePullPolicy: Always
      restartPolicy: Always
