workshop 3/db-deployment.yaml
apiVersion: extensions/v1beta1

kind: Deployment

metadata:
  name: db-deployment

spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mysqldb
    spec:
      volumes:
        - name: mysqldb-volume
          persistentVolumeClaim:
              claimName: mysqldb-pvc
      containers:
        - name: mysqldbcont
          image: stackupiss/northwind-db:v1
          resources:
              requests:
                cpu: "20m"
                memory: "55M"
          ports:
            - containerPort: 3306
              name: mysqldb-port
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysqldb-volume
      restartPolicy: Always
